<resources>
    <string name="app_name">Ronnie</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!--Login-->

    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="menu_login">Log in</string>
    <string name="login_forgot_password">Forgot your password?</string>
    <string name="privacy_policy_description">Privacy policy</string>
</resources>
